<resources>
    <string name="app_name">CampusApp</string>
    <string name="classroom_search">Classroom Search</string>
    <string name="schedule">Schedule</string>
    <string name="courses">Courses</string>
    <string name="where_am_i">Where Am I?</string>
    <string name="campus_map">Campus Map</string>
    <string name="events">Events</string>
    <string name="book_classroom">Book Classroom</string>
    <string name="map_of_the_campus">Map of the Campus</string>
    <string name="password">Password:</string>
    <string name="e_mail">E-mail:</string>
    <string name="logo">Logo</string>
    <string name="login">LogIn</string>
    <string name="password_hint">Password</string>
    <string name="e_mail_hint">E-Mail</string>
    <string name="table_layout_4_open" />
    <string name="table_layout_4_open_shortcut" />
    <string name="table_layout_4_save" />
    <string name="table_layout_4_save_shortcut" />
    <string name="search">Search</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="doc_identifica_o"><b>Identification Num.</b> \n 1234567</string>
    <string name="number_doc">12345678</string>
    <string name="informa_es_pessoais">Personal Informations</string>
    <string name="n_mec"><b>N_Mec</b> \n%1$s</string>
    <string name="telem_vel"><b>Phone Number</b> \n%1$s</string>
    <string name="profile">Profile</string>
    <string name="alberto_dos_reis">Alberto dos Reis</string>
    <string name="nif"><b>NIF</b> \n%1$s</string>
    <string name="localidade"><b>Nacionality</b> \n%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wednesday">Wednesday</string>
    <string name="schedule2">Classroom schedule</string>
    <string name="what_classroom_are_you_looking_for">Classroom Schedule</string>
    <string name="register">Register</string>
    <string name="eventSubmit">Submit Event</string>
    <string name="event">Event</string>
    <string name="event_info">Event Informations</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="event_name">Event_name</string>
    <string name="location"><b>Location:</b>\n%1$s</string>
    <string name="np"><b>People to Attend:</b>\n%1$s</string>
    <string name="Hours_Date">Start Time:\n%1$s</string>
    <string name="description">Description:\n%1$s</string>
    <string name="creator">Created By:\n%1$s</string>
    <string name="age">Age:\n%1$s</string>
    <string name="email">Email:\n%1$s</string>
    <string name="dpname">Department</string>
    <string name="balloon_default_text">dpname</string>
    <string name="dptype">Building Type</string>
    <string-array name="tags">
        <item>Beach</item>
        <item>Cinema</item>
        <item>Party</item>
        <item>Sports</item>
        <item>Game Night</item>
        <item>Concert</item>
    </string-array>
    <string-array name="tags2">
        <item>All</item>
        <item>Beach</item>
        <item>Cinema</item>
        <item>Party</item>
        <item>Sports</item>
        <item>Game Night</item>
        <item>Concert</item>
    </string-array>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="qrcodeText">%1$s</string>
    <string name="analyse_text">Analyse Text</string>
</resources>