<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/textView8"
        android:layout_width="244dp"
        android:layout_height="67dp"
        android:layout_marginTop="256dp"
        android:autofillHints="Where are you going?"
        android:hint="@string/what_classroom_are_you_looking_for"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextSizeCheck" />

    <Button
        android:id="@+id/analyseText"
        android:layout_width="115dp"
        android:layout_height="67dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="10dp"
        android:text="@string/analyse_text"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="67dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="84dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/analyseText"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>