<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="339dp"
        android:layout_height="495dp"
        android:contentDescription="@string/campus_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/button2"
        android:layout_width="122dp"
        android:layout_height="67dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="244dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="Where are\n you going?"
        android:inputType="text"
        android:hint="@string/where_are_you_going"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>